Utworzono za pomocą Colab

--- a/praca_domowa_3.ipynb
+++ b/praca_domowa_3.ipynb
@@ -1135,12 +1135,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "How do you select the optimal threshold using the ROC curve?"
+        "How do you select the optimal threshold using the ROC curve?\n",
+        "\n",
+        "Jest wiele rożnych możliwości doboru threshold'u w zależności od tego czego wymagamy od modelu. Przykładowo, jeśli zależy nam na wysokim stosunku czułość/swoistość to wybierzemy punkt z prawego górnego rogu wykresu krzywej roc. Jasne jest jednak, że należy wybrać punkt w narożniku krzywej roc (O najmniejszej wartości na osi x przy ustalonym poziomie czułości).\n",
+        "W przypadku wyboru thresholdu dla danych trzecich wybraliśmy punkt pośredni, chcąc uzyskać donre wyniki obu miar. W tym celu"
       ],
       "metadata": {
         "id": "YzSglCWMxLCl"
       },
       "id": "YzSglCWMxLCl"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What is the AUC metric and how is it useful?\n",
+        "\n",
+        "AUC jest zdefiniowana jako pole pod krzywą roc. Mierzy ona globalnie jakość modelu nie korzystając z miar czułości i swoistości przy ustalonym poziomie odcięcia, a z ich wyników dla wszystkich takich poziomów. Można ją interpretować także jako średnią miarę czułości przy zmieniajacej się mierze swoistości."
+      ],
+      "metadata": {
+        "id": "81PGMNQyGZS0"
+      },
+      "id": "81PGMNQyGZS0"
     }
   ],
   "metadata": {
