Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -69,6 +69,18 @@
         "id": "edCfpwkVKoyf"
       },
       "id": "edCfpwkVKoyf"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "mqSzoux94FiH"
+      },
+      "id": "mqSzoux94FiH",
+      "execution_count": 3,
+      "outputs": []
     }
   ],
   "metadata": {
