Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -73,7 +73,16 @@
     {
       "cell_type": "code",
       "source": [
-        "import random"
+        "import random\n",
+        "matr=[0]*100\n",
+        "for i in range(50):\n",
+        "    matr[i]=[random.uniform(0,i) for j in range(1000)]\n",
+        "coef_true=[0]*50\n",
+        "for i in range(50):\n",
+        "    if i%5==0:\n",
+        "        coef_true[i]=0\n",
+        "    elif i%2==0:\n",
+        "        coef_true[i]=random.uniform(1,2)"
       ],
       "metadata": {
         "id": "mqSzoux94FiH"
