--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -74,21 +74,99 @@
       "cell_type": "code",
       "source": [
         "import random\n",
-        "matr=[0]*100\n",
-        "for i in range(50):\n",
-        "    matr[i]=[random.uniform(0,i) for j in range(1000)]\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "matr=[0]*1000\n",
+        "for i in range(1000):\n",
+        "    matr[i]=[random.uniform(0,i+1) for j in range(50)]\n",
         "coef_true=[0]*50\n",
         "for i in range(50):\n",
-        "    if i%5==0:\n",
+        "    if i%5!=0:\n",
         "        coef_true[i]=0\n",
-        "    elif i%2==0:\n",
-        "        coef_true[i]=random.uniform(1,2)"
+        "    elif i%10==0:\n",
+        "        coef_true[i]=random.uniform(0,1)\n",
+        "    else:\n",
+        "        coef_true[i]=random.uniform(1,2)\n",
+        "coef_true=np.array(coef_true)\n",
+        "y_true = np.dot(matr, coef_true)"
       ],
       "metadata": {
         "id": "mqSzoux94FiH"
       },
       "id": "mqSzoux94FiH",
-      "execution_count": 3,
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sklearn.linear_model\n",
+        "#from sklearn.linear_model import LassoCV, Lasso, Ridge\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import mean_squared_error\n",
+        "\n",
+        "#y_true_sc = StandardScaler().fit_transform(y_true)\n",
+        "df = pd.DataFrame(matr)\n",
+        "df.columns = [f\"x{i}\" for i in range(df.shape[1])]\n",
+        "df[\"y\"] = y_true\n",
+        "df.head()\n",
+        "\n",
+        "df_sc = StandardScaler().fit_transform(df)\n",
+        "df_sc = pd.DataFrame(df_sc, columns=df.columns)\n",
+        "df_sc.head()\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(matr, y_true, test_size=0.2, random_state=42)\n"
+      ],
+      "metadata": {
+        "id": "851jGRGj1PXW"
+      },
+      "id": "851jGRGj1PXW",
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "id": "FzSwEzeu-YlK",
+        "outputId": "662e85ab-8778-4f7c-9405-fee0ff695a2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "FzSwEzeu-YlK",
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['x0', 'x1', 'x2', 'x3', 'x4', 'x5', 'x6', 'x7', 'x8', 'x9', 'x10',\n",
+              "       'x11', 'x12', 'x13', 'x14', 'x15', 'x16', 'x17', 'x18', 'x19', 'x20',\n",
+              "       'x21', 'x22', 'x23', 'x24', 'x25', 'x26', 'x27', 'x28', 'x29', 'x30',\n",
+              "       'x31', 'x32', 'x33', 'x34', 'x35', 'x36', 'x37', 'x38', 'x39', 'x40',\n",
+              "       'x41', 'x42', 'x43', 'x44', 'x45', 'x46', 'x47', 'x48', 'x49', 'y'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oj7j28094Bjx"
+      },
+      "id": "oj7j28094Bjx",
+      "execution_count": null,
       "outputs": []
     }
   ],
