Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -96,7 +96,7 @@
         "id": "mqSzoux94FiH"
       },
       "id": "mqSzoux94FiH",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,17 +123,21 @@
         "id": "851jGRGj1PXW"
       },
       "id": "851jGRGj1PXW",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "alphas=logspace(-3, 3, 100)\n",
+        "bias_sq=[[i for i in range(100)] for j in range(100)]\n",
+        "for j in alphas:\n",
         "for i in range(100):\n",
         "  X_train, X_test, y_train, y_test = train_test_split(matr, y_true, test_size=0.2, random_state=42)\n",
-        "  alphas = [0.01, 0.1, 1, 5, 10, 50, 100, 1000]\n",
-        "Lasso(alpha=1.0).fit(X_train, y_train)\n",
-        "Ridge(alpha=1.0).fit(X_train, y_train)"
+        "  las_mod=Lasso(alpha=j).fit(X_train, y_train)\n",
+        "\n",
+        "  Ridge(alpha=j).fit(X_train, y_train)"
       ],
       "metadata": {
         "id": "9gfSNWOEAY9R",
@@ -144,7 +148,7 @@
         }
       },
       "id": "9gfSNWOEAY9R",
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,7 +593,7 @@
         "outputId": "662e85ab-8778-4f7c-9405-fee0ff695a2c"
       },
       "id": "FzSwEzeu-YlK",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
