Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -131,13 +131,16 @@
       "source": [
         "\n",
         "alphas=logspace(-3, 3, 100)\n",
-        "bias_sq=[[i for i in range(100)] for j in range(100)]\n",
-        "for j in alphas:\n",
+        "biases=[[i for i in range(100)] for j in range(100)]\n",
+        "variances=[[i for i in range(100)] for j in range(100)]\n",
+        "for j in range(len(alphas)):\n",
         "for i in range(100):\n",
         "  X_train, X_test, y_train, y_test = train_test_split(matr, y_true, test_size=0.2, random_state=42)\n",
         "  las_mod=Lasso(alpha=j).fit(X_train, y_train)\n",
-        "\n",
-        "  Ridge(alpha=j).fit(X_train, y_train)"
+        "  y_las_pred= las_mod.predict(X_train)\n",
+        "  l2_mod=Ridge(alpha=j).fit(X_train, y_train)\n",
+        "  y_l2_pred= l2_mod.predict(X_train)\n",
+        "  biases[j][i]="
       ],
       "metadata": {
         "id": "9gfSNWOEAY9R",
