Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -90,13 +90,15 @@
         "    else:\n",
         "        coef_true[i]=random.uniform(1,2)\n",
         "coef_true=np.array(coef_true)\n",
-        "y_true = np.dot(matr, coef_true)"
+        "y_true = np.dot(matr, coef_true)\n",
+        "eps = np.random.normal(0,0.5,1000)\n",
+        "y_true = np.add(y_true, eps)"
       ],
       "metadata": {
         "id": "mqSzoux94FiH"
       },
       "id": "mqSzoux94FiH",
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
