Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -78,9 +78,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "matr=[0]*1000\n",
-        "for i in range(1000):\n",
-        "    matr[i]=[random.uniform(0,i+1) for j in range(50)]\n",
+        "\n",
         "coef_true=[0]*50\n",
         "for i in range(50):\n",
         "    if i%5!=0:\n",
@@ -89,16 +87,21 @@
         "        coef_true[i]=random.uniform(0,1)\n",
         "    else:\n",
         "        coef_true[i]=random.uniform(1,2)\n",
+        "\n",
+        "def artif_data():\n",
+        "matr=[0]*1000\n",
+        "for i in range(1000):\n",
+        "    matr[i]=[random.uniform(0,i+1) for j in range(50)]\n",
+        "\n",
         "coef_true=np.array(coef_true)\n",
         "y_true = np.dot(matr, coef_true)\n",
-        "eps = np.random.normal(0,0.5,1000)\n",
-        "y_true = np.add(y_true, eps)"
+        "return [matr, y_true]"
       ],
       "metadata": {
         "id": "mqSzoux94FiH"
       },
       "id": "mqSzoux94FiH",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,8 +121,7 @@
         "\n",
         "df_sc = StandardScaler().fit_transform(df)\n",
         "df_sc = pd.DataFrame(df_sc, columns=df.columns)\n",
-        "df_sc.head()\n",
-        "\n"
+        "df_sc.head()"
       ],
       "metadata": {
         "id": "851jGRGj1PXW"
