Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -87,13 +87,14 @@
         "        coef_true[i]=random.uniform(0,1)\n",
         "    else:\n",
         "        coef_true[i]=random.uniform(1,2)\n",
+        "coef_true=np.array(coef_true)\n",
         "\n",
         "def artif_data():\n",
         "matr=[0]*1000\n",
         "for i in range(1000):\n",
         "    matr[i]=[random.uniform(0,i+1) for j in range(50)]\n",
         "\n",
-        "coef_true=np.array(coef_true)\n",
+        "\n",
         "y_true = np.dot(matr, coef_true)\n",
         "return [matr, y_true]"
       ],
@@ -144,7 +145,7 @@
         "  y_las_pred= las_mod.predict(X_train)\n",
         "  l2_mod=Ridge(alpha=j).fit(X_train, y_train)\n",
         "  y_l2_pred= l2_mod.predict(X_train)\n",
-        "  biases[j][i]="
+        "  biases[j][i]=y_las_pred[i]-y_tr"
       ],
       "metadata": {
         "id": "9gfSNWOEAY9R",
