Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -81,14 +81,14 @@
         "\n",
         "coef_true=[0]*50\n",
         "for i in range(50):\n",
-        "    if i%5!=0:\n",
-        "        coef_true[i]=0\n",
-        "    elif i==0:\n",
-        "        coef_true[i]=random.uniform(0,1)\n",
-        "    elif i%10==0:\n",
-        "        coef_true[i]=random.uniform(0,1)\n",
-        "    else:\n",
-        "        coef_true[i]=random.uniform(1,2)\n",
+        "  if i%5!=0:\n",
+        "    coef_true[i]=0\n",
+        "  elif i==0:\n",
+        "    coef_true[i]=random.uniform(0,1)\n",
+        "  elif i%10==0:\n",
+        "    coef_true[i]=random.uniform(0,1)\n",
+        "  else:\n",
+        "    coef_true[i]=random.uniform(1,2)\n",
         "coef_true=np.array(coef_true)\n",
         "\n"
       ],
@@ -96,6 +96,18 @@
         "id": "mqSzoux94FiH"
       },
       "id": "mqSzoux94FiH",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"pupa\")"
+      ],
+      "metadata": {
+        "id": "IxJ_EPaaKtXm"
+      },
+      "id": "IxJ_EPaaKtXm",
       "execution_count": null,
       "outputs": []
     },
