Utworzono za pomocą Colab

--- a/pd4_um_uw.ipynb
+++ b/pd4_um_uw.ipynb
@@ -95,7 +95,7 @@
         "id": "mqSzoux94FiH"
       },
       "id": "mqSzoux94FiH",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "id": "lpjsFfJ4ASyD"
       },
       "id": "lpjsFfJ4ASyD",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
         "collapsed": true
       },
       "id": "9gfSNWOEAY9R",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +227,7 @@
         }
       },
       "id": "Fnmtse30NNSv",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
         "outputId": "3d741fd1-30c1-47be-cd96-bd872697d596"
       },
       "id": "FzSwEzeu-YlK",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -294,7 +294,7 @@
       "source": [
         "Explain MSE decomposition into bias and variance.\n",
         "\n",
-        "Twierdzenie mówi że MSE estymatora jest równe sumie bias^2 i wariancji. Oznacza to że chcąc minimalizować błąd średniokwadratowy chcemy brać pod uwagę oba te składniki. Stosując regularyzację zmniejszammy (lub nawet ściągamy do zera w przypadku lasso współczynniki do zera), co skutkuje zmniejszeniem wariancji modelu, jednak z reguły rośnie wtedy bias, gdyż predykcja nie uwzględnia wpływów zmiennych, które wcześniej miały istotniejszy wpływ na model."
+        "Twierdzenie mówi, że MSE estymatora jest równe sumie bias^2 i wariancji. Oznacza to że chcąc minimalizować błąd średniokwadratowy chcemy brać pod uwagę oba te składniki. Stosując regularyzację zmniejszammy (lub nawet ściągamy do zera w przypadku lasso współczynniki), co skutkuje zmniejszeniem wariancji modelu, jednak z reguły rośnie wtedy bias, gdyż predykcja nie uwzględnia wpływów zmiennych, które wcześniej miały istotniejszy wpływ na model. Oczywiście estymator MNK jest nieobciążony zatem dodanie kary w modelu liniowym wprowadzi obciążenie do estymatora, natomiast liczymy, że zysk płynący ze zmniejszenia wariancji będzie większy."
       ],
       "metadata": {
         "id": "MxoBB6fTsz5k"
@@ -303,23 +303,27 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "3SR8nuqv-3zP"
-      },
-      "id": "3SR8nuqv-3zP"
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "Analyze how Ridge and Lasso differ in terms of their bias-variance trade-offs.\n",
         "\n",
-        "Lasso ma własność polegającą na ściąganiu do zera współczynników, w związku z czym wariancja na ogół szybciej maleje kosztem obciążenia dla modelu Lasso."
+        "Lasso ma własność polegającą na ściąganiu do zera współczynników, w związku z czym wariancja na ogół szybciej maleje kosztem obciążenia dla modelu Lasso. W modelu rigde bias zmienia się nieznacznie (zwykle zwiększa się, ale zdarzają się wyjątki takie jak ten obserwowany w naszym eksperymencie), a podobnie jak w LASSO wariancja zmniejsza się."
       ],
       "metadata": {
         "id": "_q_kZHbL-9eA"
       },
       "id": "_q_kZHbL-9eA"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Discuss situations where one method may outperform the other, considering factors like feature sparsity and multicollinearity.\n",
+        "\n",
+        "Metoda Lasso zdecydowanie lepiej radzi sobie z sytuacją, gdy w modelu występuje tylko niewielki podzbiór wszystkich cech spośród tych obecnych w danych (sytuacja ta jest występuje w przeprowadzonym eksperymencie). Jest to oczywiste, gdyż lasso wyzeruje część ze współczynników. To z kolei wynika z zadania optymalizacji i postaci kuli w normie L1. Własność ta nazywa się rzadkością. W takim razie LASSO jest też modelem, który ocenia wpływ zniemmych na model, co może być użyteczne samo w sobie np. do wyboru mniejszego podzbioru do dalszej analizy. Ridge jednak też ma swoje zalety. Oczywiście zmniejszenie wariancji przy bardziej stabilnym utrzymywaniu obciążenia na danym poziomie daje dużo elastyczności. Jednak równie ważnym atutem jest dobre radzenie sobie modelu z tzw. współliniowością cech (lub przybliżoną współliniowością). Dotyczy ona sytuacji gdy zmienne objaśniające są w przybliżeniu kombinacjami liniowymi innych cech. W tym przypadku ściągnięcie do zera jednej z silnie skorelowanych zmiennych (mówimy o korelacji Pearsona, która bada korelację liniową) co prawda usuwa ten problem, jednakże wówczas model traci informację zawartą w zmiennej usuniętej z modelu przez nadanie jej wagi 0, co może zwiększyć obciążenie całego modelu. Lepszym rozwiązaniem jest to, które wprowadza Ridge. Wówczas następuje przeskalowanie wpływów zmiennych wysoce skorelowanych (gdy wsp. korelacji jest bliski 1 lub -1), poprzez nadanie każdej z nich wagi będącej średnią z wartości ich współczynników w modelu (oczywiście dla danych ustandaryzowanych), wtedy model jest stabilniejszy.\n"
+      ],
+      "metadata": {
+        "id": "5AVxPGaaogao"
+      },
+      "id": "5AVxPGaaogao"
     }
   ],
   "metadata": {
