Utworzono za pomocą Colab

--- a/praca_domowa5_uw.ipynb
+++ b/praca_domowa5_uw.ipynb
@@ -97,7 +97,7 @@
         "collapsed": true
       },
       "id": "4Qs2rmoJjVxl",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +530,7 @@
         "collapsed": true
       },
       "id": "jV9mU8ozxcKa",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
         }
       },
       "id": "tb8N6HwHiPhX",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +640,7 @@
         }
       },
       "id": "r41asORlpIZ0",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +709,7 @@
         }
       },
       "id": "3ZwILtkiXsAp",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,6 +749,28 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Why does the SVM's decision boundary in the higher-dimensional (3D) feature space not look like a “flat” hyperplane, even though we know the classifier’s separating surface is mathematically linear in that space?\n",
+        "\n",
+        "ok, so in particular as our transformation from decision curve in 2D into decision plane in 3D is not surjective so the points which are both on decision plane  in transformed 3D space and in the image of decision curve in original space does not form whole plane, but only its subset?  "
+      ],
+      "metadata": {
+        "id": "dMy6Wg7cGmJx"
+      },
+      "id": "dMy6Wg7cGmJx"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Explain why a hyperplane in 3D becomes a circular (or elliptical) curve when viewed back in the original 2D plane of the dataset."
+      ],
+      "metadata": {
+        "id": "TwfK4CgnG3Yh"
+      },
+      "id": "TwfK4CgnG3Yh"
     },
     {
       "cell_type": "code",
@@ -811,7 +833,7 @@
         "outputId": "1102f580-45db-4ecd-80c0-b4fd0c8d51aa"
       },
       "id": "Q1hsuOcahSSN",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
