Utworzono za pomocą Colab

--- a/praca_domowa5_uw.ipynb
+++ b/praca_domowa5_uw.ipynb
@@ -755,7 +755,9 @@
       "source": [
         "Why does the SVM's decision boundary in the higher-dimensional (3D) feature space not look like a “flat” hyperplane, even though we know the classifier’s separating surface is mathematically linear in that space?\n",
         "\n",
-        "ok, so in particular as our transformation from decision curve in 2D into decision plane in 3D is not surjective so the points which are both on decision plane  in transformed 3D space and in the image of decision curve in original space does not form whole plane, but only its subset?  "
+        "Żeby odpowiedzieć na to pytanie zastanówmy się czym jest granica decyzyjna zarówno w przypadku oryginalnej przestrzeni 2-wymiarowej jak i w przypadku przestrzeni 3-wymiarowej, w której leżą punkty z obrazu w transformacji $\\phi$. W przypadku tej pierwszej możemy uznać że ta granica to pewien podzbiór punktów, który oddziela obszary, których punkty są klasyfikowane do różnych klas. Dokładniej omówimy jak ten zbiór wygląda w drugim pytaniu. Skoro jest to podzbiór\n",
+        "\n",
+        "ok, so in particular as our transformation from decision curve in 2D into decision plane in 3D is not surjective so the points which are both on decision plane  in transformed 3D space and in the image of decision curve in original space does not form whole plane, but only its subset?"
       ],
       "metadata": {
         "id": "dMy6Wg7cGmJx"
@@ -871,7 +873,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "language_info": {
