Utworzono za pomocą Colab

--- a/praca_domowa6.ipynb
+++ b/praca_domowa6.ipynb
@@ -123,7 +123,7 @@
         "id": "riXsgF53_dk9"
       },
       "id": "riXsgF53_dk9",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "id": "VdB6Jgt8-kr4"
       },
       "id": "VdB6Jgt8-kr4",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         }
       },
       "id": "Ec_5nOv0qe9R",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +190,7 @@
         "id": "SK1fp56rCS9f"
       },
       "id": "SK1fp56rCS9f",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -219,7 +219,7 @@
         }
       },
       "id": "2ocbVyLqBCEA",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +562,7 @@
         "id": "UlYyA5gVDkB2"
       },
       "id": "UlYyA5gVDkB2",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,7 +580,7 @@
         "id": "kQRRljpegnMQ"
       },
       "id": "kQRRljpegnMQ",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -612,7 +612,7 @@
         "id": "qIZTnhCxg3T4"
       },
       "id": "qIZTnhCxg3T4",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -634,7 +634,7 @@
         "id": "E5bdZBR1jGqO"
       },
       "id": "E5bdZBR1jGqO",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -661,7 +661,7 @@
         "id": "f9Gh-WcxhjfV"
       },
       "id": "f9Gh-WcxhjfV",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -716,7 +716,7 @@
         "id": "od65IICCjDc-"
       },
       "id": "od65IICCjDc-",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -737,7 +737,7 @@
         "id": "-37Cz2HJiLLw"
       },
       "id": "-37Cz2HJiLLw",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -750,7 +750,7 @@
         "id": "FKqmV1gzoF7a"
       },
       "id": "FKqmV1gzoF7a",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +766,7 @@
         "id": "ZpbkjiEKtgZd"
       },
       "id": "ZpbkjiEKtgZd",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +785,7 @@
         }
       },
       "id": "R_4rfs2FiWaL",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -818,7 +818,7 @@
         }
       },
       "id": "VQEc7lkUqFg_",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -849,7 +849,7 @@
         }
       },
       "id": "5GEdxRD3jTmP",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,13 +873,13 @@
       ],
       "metadata": {
         "id": "padI0sMirJXW",
-        "outputId": "041d10bc-86be-44e6-8798-6a9700cc34eb",
+        "outputId": "d730df1f-da79-4f1c-aef3-f59b083b4816",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "padI0sMirJXW",
-      "execution_count": 45,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -889,7 +889,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 52
         }
       ]
     },
@@ -910,7 +910,7 @@
         }
       },
       "id": "VzxdVySamznv",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,13 +923,58 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "y_pred_train = predict(X_train, tree)\n",
+        "mean_squared_error(y_train, y_pred_train)**(1/2)"
+      ],
       "metadata": {
-        "id": "z8JaSZMYra34"
+        "id": "z8JaSZMYra34",
+        "outputId": "d3e5d473-f7e8-411c-a2dd-bf81cdd228e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "z8JaSZMYra34",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "17643.54132112304"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rss(y_pred_train), rss(y_pred)"
+      ],
+      "metadata": {
+        "id": "4f-9CTJa08eE",
+        "outputId": "80c59c18-0342-4584-8cb9-95b97ac5f80e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "4f-9CTJa08eE",
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(np.float64(135678808201.39616), np.float64(79770427635.05501))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     }
   ],
   "metadata": {
